--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
   <div class="container">
     <header class="site-header">
-      <img src="img/nasa-worm-logo.png" alt="NASA Logo" class="logo" />
+      <img src="img/NASA-Logo-Large.jpg" alt="NASA Logo" class="logo" />
       <h1>Space Explorer</h1>
     </header>
 
     <div class="filters">
       <input type="date" id="startDate" />
       <input type="date" id="endDate" />
-      <button>Get Space Images</button>
+      <button id="imageBtn">Get Space Images</button>
     </div>
 
     <div id="gallery" class="gallery">
